--- a/hot_dogz/templates/contact.html
+++ b/hot_dogz/templates/contact.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="relative bg-bottom bg-no-repeat min-h-screen-less-both-nav bg-dog3">
+    <div class="relative bg-bottom bg-no-repeat min-h-screen-less-both-nav md:min-h-screen-less-nav bg-dog3">
         <h1 class="title text-secondary-500 ">Contact Us</h1>
-            <form action="" method="POST" class="z-10 flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-lg fade-in w-80" novalidate>
+            <form action="" method="POST" class="z-10 flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md fade-in w-80" novalidate>
                 {{ form.hidden_tag()}}
                 <fieldset class="pb-2">
                     {{form.username.label}}
