--- a/hot_dogz/templates/edit_profile.html
+++ b/hot_dogz/templates/edit_profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container flex flex-col items-center mx-auto">
     <h2 class="py-2 text-4xl text-center font-title text-primary-500 ">Edit Username / Email</h2>
-        <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
+        <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-md w-80" novalidate>
             {{ form.hidden_tag()}}
             <fieldset class="pb-2">
                 {{form.username.label}}
