--- a/hot_dogz/templates/register.html
+++ b/hot_dogz/templates/register.html
@@ -3,7 +3,7 @@
     <!-- RESITER ACCOUNT FORM PAGE -->
     <h1 class="title text-secondary-500 ">Register</h1>
     <div class="container flex flex-col items-center mx-auto">
-        <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-lg w-80" novalidate>
+        <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-md w-80" novalidate>
                 {{ form.hidden_tag()}}
                 <fieldset class="pb-2 ">
                     {{form.username.label}}
