--- a/hot_dogz/static/css/app.css
+++ b/hot_dogz/static/css/app.css
@@ -3,6 +3,12 @@
 
 html {
     scroll-behavior: smooth;
+
+}
+@media only screen and (max-width: 767px){
+    html {
+        font-size: 85%;
+    }
 }
 
 @tailwind utilities;
