--- a/hot_dogz/templates/contact.html
+++ b/hot_dogz/templates/contact.html
@@ -7,14 +7,14 @@
                 {{ form.hidden_tag()}}
                 <fieldset class="pb-2">
                     {{form.username.label}}
-                    {{form.username(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
+                    {{form.username(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none  rounded-md bg-gray-200')}}
                     {% for error in form.username.errors %}
                         <span class="text-red-500"> {{error}} </span>
                     {% endfor %}
                 </fieldset>
                 <fieldset class="pb-2">
                     {{form.email.label}}
-                    {{form.email(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
+                    {{form.email(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md bg-gray-200')}}
                     {% for error in form.email.errors %}
                         <span class="text-red-500 "> {{error}} </span>
                     {% endfor %}
