--- a/hot_dogz/templates/email/reset_password.html
+++ b/hot_dogz/templates/email/reset_password.html
@@ -1,5 +1,7 @@
-<h1>Hi, {{ user.username }}!</h1>
-<h2> To reset your password, please <a href="{{ url_for('users.reset_password', token=token, _external=True) }}">click here</a>.</h2>
-<h2>If you have not requested a password reset simply ignore this message.</h2>
-<h2>Woof Woof,</h2>
-<h1>Hot Dogz</h1>
+<div class="text-2xl">
+    <h1 class="text-3xl">Hi, <strong>{{ user.username }}</strong>!</h1>
+    <h2>To reset your password, please <a href="{{ url_for('users.reset_password', token=token, _external=True) }}" class="font-semibold text-primary-500">click here</a>.</h2>
+    <h2>(If you have not requested a password reset simply ignore this message.)</h2>
+    <h2>Woof Woof!</h2>
+    <h1 class="italic font-semibold ">Hot Dogz</h1>
+</div>
