--- a/hot_dogz/templates/contact.html
+++ b/hot_dogz/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="relative bg-bottom bg-no-repeat min-h-screen-less-both-nav md:min-h-screen-less-nav bg-dog3">
+    <div class="relative bg-bottom bg-no-repeat md:bg-right-bottom min-h-screen-less-both-nav md:min-h-screen-less-nav bg-dog3">
         <h1 class="title text-secondary-500 ">Contact Us</h1>
             <form action="" method="POST" class="z-10 flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md fade-in w-80" novalidate>
                 {{ form.hidden_tag()}}
