--- a/hot_dogz/templates/edit_profile.html
+++ b/hot_dogz/templates/edit_profile.html
@@ -1,27 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container flex flex-col items-center mx-auto">
-    <h2 class="py-2 text-4xl text-center font-title text-primary-500 ">Edit Username / Email</h2>
-        <form action="" method="POST" class="flex flex-col p-4 border border-gray-100 rounded-lg shadow-md w-80" novalidate>
+<div class="container flex flex-col items-center mx-auto bg-fixed bg-bottom bg-no-repeat bg-contain min-h-screen-less-nav md:min-h-screen-less-nav bg-dog6">
+    <h1 class="py-4 title text-secondary-500 ">Edit Profile</h1>
+    <form action="" method="POST" class="flex flex-col p-4 bg-white border border-gray-100 rounded-lg shadow-md w-80" novalidate>
             {{ form.hidden_tag()}}
             <fieldset class="pb-2">
                 {{form.username.label}}
-                {{form.username(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
+                {{form.username(class_='form-input')}}
                 {% for error in form.username.errors %}
                     <span class="text-red-500"> {{error}} </span>
                 {% endfor %}
             </fieldset>
             <fieldset class="pb-2">
                 {{form.email.label}}
-                {{form.email(class_='mb-3 w-full py-3 px-4 border border-gray-400 focus:outline-none rounded-md focus:ring-1 ')}}
+                {{form.email(class_='form-input')}}
                 {% for error in form.email.errors %}
-                    <span class="text-red-500 "> {{error}} </span>
+                    <span class="text-red-500"> {{error}} </span>
                 {% endfor %}
             </fieldset>
             <fieldset class="pb-2">
                 {{form.submit(class_='w-full btn btn-secondary')}}
             </fieldset>
-        </form>
+    </form>
 </div>
 {% endblock content %}
