--- a/hot_dogz/templates/profile.html
+++ b/hot_dogz/templates/profile.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <!-- USER PROFILE -->
-    <div class="container mx-auto shadow-md">
+    <div class="container mx-auto">
         <!-- DETAILS (avatar, username, edit buttons if current user) -->
         <div class="flex py-4 justify-evenly">
             <div>
