--- a/hot_dogz/templates/gallery.html
+++ b/hot_dogz/templates/gallery.html
@@ -2,9 +2,9 @@
 {% block content %}
     <!-- MAIN GALLERY PAGE -->
     <div class="bg-fixed bg-bottom bg-no-repeat bg-max-sm-contain {{'bg-dog5' if view == 'hot' else 'bg-dog2'}}">
-        <div class="{{'bg-fade' if animate == 'on' else 'bg-no-fade'}} ">
+        <div class="{{'bg-fade' if animate == 'on' else 'bg-no-fade'}} max-w-screen-lg mx-auto min-h-screen-less-nav ">
             <h1 class="title text-secondary-500 ">Gallery</h1>
-            <div class="grid grid-cols-2 py-4 place-items-center">
+            <div class="grid grid-cols-2 py-4 lg:py-2 place-items-center">
                 <a href="{{url_for('main.gallery', view='hot', animate='on')}}"
                 class="font-title {{'text-4xl text-primary-500 italic' if view == 'hot' else 'text-3xl text-secondary-500'}} hover:underline focus:italic">HOT</a>
                 <a href="{{url_for('main.gallery', view='new', animate='on')}}"
@@ -17,34 +17,36 @@
                     <i class="far fa-star"></i> <span class="text-gray-500">Check out the newest dogs</span> <i class="far fa-star"></i>
                 {% endif %}
             </p>
-            <div class="flex flex-col min-h-screen gap-4 px-4 py-4 {{'gallery-animate' if animate == 'on'}}">
+            <div class="flex flex-col gap-4 px-4 py-4 {{'gallery-animate' if animate == 'on'}} lg:grid lg:grid-cols-2">
                 {% for dog in dogs.items %}
                     {% include '_dog_card.html' %}
                 {% endfor %}
+            </div>
+            <div class="flex flex-col gap-4">
                 {# Macro for creating navigation links #}
-                <!-- source: https://github.com/MongoEngine/flask-mongoengine/blob/master/flask_mongoengine/pagination.py -->
-                {% macro render_navigation(pagination, endpoint) %}
-                    <div class="flex items-center justify-center gap-4 text-center pagination {{'opacity-0' if animate == 'on'}}">
-                        {% for page in pagination.iter_pages(left_edge=1, left_current=1, right_current=1, right_edge=1) %}
-                            <!-- Iterates over the page numbers in the pagination.  The four
-                            parameters control the thresholds how many numbers should be produced
-                            from the sides. -->
-                            {% if page %}
-                                {% if page != pagination.page %}
-                                    <a href="{{ url_for(endpoint, view=view, page=page) }}" class="paginate-btn">{{ page }}</a>
+                    <!-- source: https://github.com/MongoEngine/flask-mongoengine/blob/master/flask_mongoengine/pagination.py -->
+                    {% macro render_navigation(pagination, endpoint) %}
+                        <div class="flex items-center justify-center gap-4 text-center pagination {{'fade-in-slow' if animate == 'on'}}">
+                            {% for page in pagination.iter_pages(left_edge=1, left_current=1, right_current=1, right_edge=1) %}
+                                <!-- Iterates over the page numbers in the pagination.  The four
+                                parameters control the thresholds how many numbers should be produced
+                                from the sides. -->
+                                {% if page %}
+                                    {% if page != pagination.page %}
+                                        <a href="{{ url_for(endpoint, view=view, page=page) }}" class="paginate-btn">{{ page }}</a>
+                                    {% else %}
+                                    <p class="paginate-btn opacity-30">{{ page }}</p>
+                                    {% endif %}
                                 {% else %}
-                                <p class="paginate-btn opacity-30">{{ page }}</p>
+                                    <span class="self-end font-bold ellipsis text-primary-500">…</span>
                                 {% endif %}
-                            {% else %}
-                                <span class="self-end font-bold ellipsis text-primary-500">…</span>
-                            {% endif %}
-                        {% endfor %}
+                            {% endfor %}
+                        </div>
+                    {% endmacro %}
+                    {{ render_navigation(dogs, 'main.gallery') }}
+                    <div class="grid w-full max-w-sm py-6 mx-auto dash-border place-items-center {{'fade-in-slow' if animate == 'on'}}">
+                        <a href="{{url_for('dogs.upload_dog')}}" class="px-2 btn btn-primary">Upload a new dog!</a>
                     </div>
-                {% endmacro %}
-                {{ render_navigation(dogs, 'main.gallery') }}
-                <div class="grid w-full max-w-sm py-6 mx-auto dash-border place-items-center {{'opacity-0' if animate == 'on'}}">
-                    <a href="{{url_for('dogs.upload_dog')}}" class="px-2 btn btn-primary">Upload a new dog!</a>
-                </div>
             </div>
         </div>
     </div>
