--- a/hot_dogz/templates/upload_dog.html
+++ b/hot_dogz/templates/upload_dog.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="relative bg-bottom bg-no-repeat min-h-screen-less-both-nav md:min-h-screen-less-nav bg-dog8 md:bg-cover">
+<div class="relative bg-bottom bg-no-repeat min-h-screen-less-both-nav md:min-h-screen-less-nav bg-dog8">
     <h1 class="title text-secondary-500 ">{{title}}</h1>
         <form action="" method="POST" enctype="multipart/form-data" class="z-10 flex flex-col p-4 mx-auto bg-white border border-gray-100 rounded-lg shadow-md fade-in w-80" novalidate>
             {{ form.hidden_tag()}}
