--- a/hot_dogz/templates/errors/404.html
+++ b/hot_dogz/templates/errors/404.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="min-h-screen bg-fixed bg-bottom bg-no-repeat bg-contain bg-dog1">
-        <div class="flex flex-col items-center gap-4 py-4 text-center">
-            <h1 class="text-2xl"><span class="text-4xl font-title text-primary-500">Oops.</span> Page not found! (404)</h1>
+    <div class="flex flex-col min-h-screen-less-nav lg:flex-row ">
+        <div class="flex flex-col items-center justify-center flex-1 gap-4 py-4 text-center lg:gap-10">
+            <h1 class="text-2xl lg:text-5xl"><span class="text-6xl font-title text-primary-500">Oops.</span> Page not found! (404)</h1>
             <p>That page does not exist. Please try a different location.</p>
             <button class="w-40 btn btn-secondary focus:outline-none" onclick="history.back(-1)">Go Back</button>
         </div>
+        <img src="https://res.cloudinary.com/cjcon90/image/upload/w_700,c_scale,q_auto,f_jpg/v1614203125/hot_dogz/wallpapers/dog1_crop.jpg"
+        alt="Picture of a bulldopg in a tutu" class="flex-1 object-contain max-w-3xl mx-auto ">
     </div>
 {% endblock %}
