--- a/hot_dogz/templates/gallery.html
+++ b/hot_dogz/templates/gallery.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
     <!-- MAIN GALLERY PAGE -->
-    <div class="bg-fixed bg-bottom bg-no-repeat bg-max-sm-contain {{'bg-dog5' if view == 'hot' else 'bg-dog2'}}">
+    <div class="bg-fixed bg-bottom bg-no-repeat bg-max-sm-contain {{'bg-dog5' if view == 'hot' else 'bg-dog2'}} lg:mb-6">
         <div class="{{'bg-fade' if animate == 'on' else 'bg-no-fade'}} max-w-screen-lg mx-auto min-h-screen-less-nav ">
             <h1 class="title text-secondary-500 ">Gallery</h1>
             <div class="grid grid-cols-2 py-4 lg:py-2 place-items-center">
                 <a href="{{url_for('main.gallery', view='hot', animate='on')}}"
-                class="font-title {{'text-4xl text-primary-500 italic' if view == 'hot' else 'text-3xl text-secondary-500'}} hover:underline focus:italic">HOT</a>
+                class="font-title {{'text-5xl text-primary-500 italic' if view == 'hot' else 'text-4xl text-secondary-500'}} hover:underline focus:italic">HOT</a>
                 <a href="{{url_for('main.gallery', view='new', animate='on')}}"
-                class="font-title {{'text-4xl text-primary-500 italic' if view == 'new' else 'text-3xl text-secondary-500'}} hover:underline focus:italic">NEW</a>
+                class="font-title {{'text-5xl text-primary-500 italic' if view == 'new' else 'text-4xl text-secondary-500'}} hover:underline focus:italic">NEW</a>
             </div>
-            <p class="text-lg font-bold text-center text-primary-500">
+            <p class="text-lg font-bold text-center lg:text-xl text-primary-500">
                 {% if view == 'hot' %}
                     <i class="fas fa-fire"></i> <span class="text-gray-500">The hottest, most liked dogs</span> <i class="fas fa-fire"></i>
                 {% elif view == 'new' %}
